[tool.poetry]
name = "Weather-Forecast"
version = "0.1.0"
description = ""
authors = ["SteMat <Stefan.Matei@softwire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
